// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Basics|Colors all 1`] = `
<div
  className="container p-4"
>
  <h1
    className="text-xl"
  >
    Primary
  </h1>
  <div
    className="flex mt-4"
  >
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(51, 51, 51)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        default
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(0, 0, 0)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(10, 10, 10)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(20, 20, 20)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(31, 31, 31)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(41, 41, 41)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P20
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(245, 245, 245)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(214, 214, 214)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(173, 173, 173)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(133, 133, 133)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(92, 92, 92)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N20
      </p>
    </div>
  </div>
  <h1
    className="text-xl mt-8"
  >
    Utility
  </h1>
  <h2
    className="text-l mt-4"
  >
    Red
  </h2>
  <div
    className="flex mt-4"
  >
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(224, 85, 72)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        default
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(89, 34, 28)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(134, 51, 43)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(179, 68, 57)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P20
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(253, 246, 246)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(251, 238, 236)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N90
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(249, 221, 218)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(243, 187, 182)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(236, 153, 145)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(230, 119, 109)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N20
      </p>
    </div>
  </div>
  <h2
    className="text-l mt-4"
  >
    Highlight Green
  </h2>
  <div
    className="flex mt-4"
  >
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(114, 206, 92)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        default
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(114, 206, 92)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(91, 164, 73)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(68, 123, 55)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        P20
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(248, 252, 247)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N95
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(240, 250, 238)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N90
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(227, 245, 222)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N80
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(199, 235, 190)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N60
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(170, 226, 157)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N40
      </p>
    </div>
    <div
      className="ml-4"
    >
      <div
        className="h-16 w-16"
        style={
          Object {
            "backgroundColor": "rgb(142, 216, 125)",
          }
        }
      />
      <p
        className="text-center text-xs mt-2"
      >
        N20
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Basics|Typography Body 1`] = `
Array [
  <section
    className="container p-4 undefined"
  >
    <h1
      className="text-4xl"
    >
      PC
    </h1>
    <div
      className="flex"
    >
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Heading
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "24px",
              }
            }
          >
            H1
             - 
            24px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            H2
             - 
            22px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            H3
             - 
            20px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            H4
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            H5
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            H6
             - 
            14px
          </li>
        </ul>
      </div>
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Body
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            XL
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            L
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            default
             - 
            14px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "12px",
              }
            }
          >
            S
             - 
            12px
          </li>
        </ul>
      </div>
    </div>
  </section>,
  <section
    className="container p-4 mt-12"
  >
    <h1
      className="text-4xl"
    >
      SP
    </h1>
    <div
      className="flex"
    >
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Heading
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "24px",
              }
            }
          >
            H1
             - 
            24px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "22px",
              }
            }
          >
            H2
             - 
            22px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "20px",
              }
            }
          >
            H3
             - 
            20px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            H4
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            H5
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            H6
             - 
            14px
          </li>
        </ul>
      </div>
      <div
        className="mt-8 w-64"
      >
        <h2
          className="text-xl"
        >
          Body
        </h2>
        <ul
          className="list-reset mt-4"
        >
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "18px",
              }
            }
          >
            XL
             - 
            18px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "16px",
              }
            }
          >
            L
             - 
            16px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "14px",
              }
            }
          >
            default
             - 
            14px
          </li>
          <li
            className="mt-2"
            style={
              Object {
                "fontSize": "12px",
              }
            }
          >
            S
             - 
            12px
          </li>
        </ul>
      </div>
    </div>
  </section>,
]
`;

exports[`Storyshots Components|Badge all 1`] = `
<div
  className="sc-bwzfXH GIbIi"
>
  10
</div>
`;

exports[`Storyshots Components|Button Box 1`] = `
<button
  className="sc-htpNat jeSCcm"
  onClick={[Function]}
  type="box"
>
  Confirm
</button>
`;

exports[`Storyshots Components|Button Circle 1`] = `
<button
  className="sc-ifAKCX jYTyKI"
  onClick={[Function]}
  type="circle"
/>
`;

exports[`Storyshots Components|Button Text 1`] = `
<button
  className="sc-EHOje hFCfGq"
  onClick={[Function]}
  type="text"
>
  <span
    className="sc-bZQynM rlUyS"
    data-test="text-button-child"
  >
    Show filters
  </span>
</button>
`;

exports[`Storyshots Components|Checkbox all 1`] = `
<div
  className="sc-gzVnrw iyQuzR"
  data-test="nocheck-box"
  onClick={[Function]}
  tabIndex={1}
>
  <div
    className="sc-htoDjs irgUaa sc-bxivhb hBuNrQ"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    size="24px"
  />
  <span
    className="sc-dnqmqq gZhRLK"
  >
    Checkbox
  </span>
</div>
`;

exports[`Storyshots Components|DropdownMultiple Multi 1`] = `
<div
  className="ml-20 mt-10"
>
  <div>
    <div
      className="sc-gZMcBi bQuQoO"
      data-test="body"
      onClick={[Function]}
      selected={Array []}
      width={200}
    >
      <div
        className="sc-gqjmRU jBAKkK"
        data-test="text"
        width={200}
      >
        選択してください
      </div>
      <div
        className="sc-iwsKbI iadtKx sc-bxivhb hBuNrQ"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
    </div>
    <ul
      className="sc-cSHVUG bKhTjk hide sc-jTzLTM dhmccs"
      data-test="itemList"
      width={200}
    >
      <li
        className="sc-fjdhpX ghSumG"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          りんご
        </div>
      </li>
      <li
        className="sc-fjdhpX ghSumG"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          いちご
        </div>
      </li>
      <li
        className="sc-fjdhpX ghSumG"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          バナナ
        </div>
      </li>
      <li
        className="sc-fjdhpX ghSumG"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          メロン
        </div>
      </li>
      <li
        className="sc-fjdhpX ghSumG"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          さくらんぼ
        </div>
      </li>
      <li
        className="sc-fjdhpX ghSumG"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-jzJRlG jlBakv"
        >
          ぶどう
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle Borderless 1`] = `
<div
  className="ml-20 mt-10"
>
  <div>
    <div
      className="sc-hMqMXs jkGnZg"
      data-test="body"
      onClick={[Function]}
      width={76}
    >
      <div
        className="sc-kEYyzF hkAVwD"
        data-test="text"
        width={76}
      >
        20
      </div>
      <div
        className="sc-eNQAEJ iyxjRs sc-bxivhb hBuNrQ"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
    </div>
    <ul
      className="sc-jKJlTe bRNcAf hide sc-kAzzGY srheI"
      data-test="itemList"
      width={76}
    >
      <li
        className="sc-chPdSV cBcGdu"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb iLtEre"
          color="rgb(51, 51, 51)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgoBCf cSfjXi"
        >
          20
        </div>
      </li>
      <li
        className="sc-chPdSV cBcGdu"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgoBCf cSfjXi"
        >
          50
        </div>
      </li>
      <li
        className="sc-chPdSV cBcGdu"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgoBCf cSfjXi"
        >
          100
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle Default 1`] = `
<div
  className="ml-20 mt-10"
>
  <div>
    <div
      className="sc-dxgOiQ fSkOkY"
      data-test="body"
      onClick={[Function]}
      width={200}
    >
      <div
        className="sc-ckVGcZ ciWCBT"
        data-test="text"
        width={200}
      >
        選択してください
      </div>
      <div
        className="sc-kpOJdX fXodhL sc-bxivhb hBuNrQ"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
    </div>
    <ul
      className="sc-kGXeez cyOnNn hide sc-kAzzGY frJuer"
      data-test="itemList"
      width={200}
    >
      <li
        className="sc-chPdSV cBcGdu"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb iLtEre"
          color="rgb(51, 51, 51)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgoBCf cSfjXi"
        >
          
        </div>
      </li>
      <li
        className="sc-chPdSV cBcGdu"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgoBCf cSfjXi"
        >
          りんご
        </div>
      </li>
      <li
        className="sc-chPdSV cBcGdu"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgoBCf cSfjXi"
        >
          いちご
        </div>
      </li>
      <li
        className="sc-chPdSV cBcGdu"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgoBCf cSfjXi"
        >
          バナナ
        </div>
      </li>
      <li
        className="sc-chPdSV cBcGdu"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgoBCf cSfjXi"
        >
          メロン
        </div>
      </li>
      <li
        className="sc-chPdSV cBcGdu"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgoBCf cSfjXi"
        >
          さくらんぼ
        </div>
      </li>
      <li
        className="sc-chPdSV cBcGdu"
        onClick={[Function]}
      >
        <div
          className="sc-bxivhb eaqBKs"
          color="rgb(234, 234, 234)"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
        <div
          className="sc-kgoBCf cSfjXi"
        >
          ぶどう
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components|DropdownSingle ItemList 1`] = `
<div
  className="ml-20 mt-10"
>
  <ul
    className="undefined hide sc-kAzzGY frJuer"
    data-test="itemList"
    width={200}
  >
    <li
      className="sc-chPdSV cBcGdu"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb iLtEre"
        color="rgb(51, 51, 51)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-kgoBCf cSfjXi"
      >
        
      </div>
    </li>
    <li
      className="sc-chPdSV cBcGdu"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-kgoBCf cSfjXi"
      >
        りんご
      </div>
    </li>
    <li
      className="sc-chPdSV cBcGdu"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-kgoBCf cSfjXi"
      >
        いちご
      </div>
    </li>
    <li
      className="sc-chPdSV cBcGdu"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-kgoBCf cSfjXi"
      >
        バナナ
      </div>
    </li>
    <li
      className="sc-chPdSV cBcGdu"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-kgoBCf cSfjXi"
      >
        メロン
      </div>
    </li>
    <li
      className="sc-chPdSV cBcGdu"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-kgoBCf cSfjXi"
      >
        さくらんぼ
      </div>
    </li>
    <li
      className="sc-chPdSV cBcGdu"
      onClick={[Function]}
    >
      <div
        className="sc-bxivhb eaqBKs"
        color="rgb(234, 234, 234)"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
        size="24px"
      />
      <div
        className="sc-kgoBCf cSfjXi"
      >
        ぶどう
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components|Input Number 1`] = `
<div
  className="sc-brqgnP SqPLV"
>
  <input
    className="sc-cMljjf AMxZd"
    format="number"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Enter your age"
    value="0"
  />
</div>
`;

exports[`Storyshots Components|Input Text 1`] = `
<div
  className="sc-brqgnP SqPLV"
>
  <input
    className="sc-cMljjf AMxZd"
    format="text"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="Enter your name"
    value=""
  />
</div>
`;

exports[`Storyshots Components|MeatballKebabMenu all 1`] = `
<div
  className="mr-10 mt-56"
>
  <div
    className="sc-jDwBTQ ktEnXV"
  >
    <div>
      <div
        className="top sc-gPEVay hLzFjS"
        data-test="menu-component"
        onClick={[Function]}
      >
        <div
          className="sc-iRbamj blSEcj sc-bxivhb hBuNrQ"
          dangerouslySetInnerHTML={
            Object {
              "__html": undefined,
            }
          }
          size="24px"
        />
      </div>
      <ul
        className="top hidden sc-jlyJG dJNuoi"
        data-test="list-component"
      >
        <li
          className="sc-gipzik cytBb"
          data-test="list-item0"
          onClick={[Function]}
        >
          リスト1
        </li>
        <li
          className="sc-gipzik cytBb"
          data-test="list-item1"
          onClick={[Function]}
        >
          リスト2
        </li>
        <li
          className="sc-gipzik cytBb"
          data-test="list-item2"
          onClick={[Function]}
        >
          リスト3
        </li>
      </ul>
    </div>
  </div>
  <div />
</div>
`;

exports[`Storyshots Components|RadioButton all 1`] = `
<div
  className="sc-csuQGl hpLysS"
  data-test="radio-on"
  onClick={[Function]}
>
  <div
    className="sc-Rmtcm eSYqLF sc-bxivhb hBuNrQ"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    size="24px"
  />
  <span
    className="sc-bRBYWo lfLjFj"
  >
    RadioButton
  </span>
</div>
`;

exports[`Storyshots Components|SegmentedControl molecule 1`] = `
<div>
  <div
    className="sc-hzDkRC jkpExv"
    data-test="item0"
    onClick={[Function]}
    selected={true}
  >
    最初のタブ
  </div>
  <div
    className="sc-hzDkRC hvsEpk"
    data-test="item1"
    onClick={[Function]}
    selected={false}
  >
    真ん中のタブ
  </div>
  <div
    className="sc-hzDkRC hvsEpk"
    data-test="item2"
    onClick={[Function]}
    selected={false}
  >
    最後のタブ
  </div>
</div>
`;

exports[`Storyshots Components|Switch all 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-jhAzac hZrOiF"
    data-test="switch-off"
  >
    <span
      className="sc-dVhcbM brDywy"
    >
      OFF
    </span>
    <div
      className="sc-fBuWsC CaWNl"
      data-test="switch"
      onClick={[Function]}
    >
      <span
        className="sc-fMiknA iJVxZF"
      />
    </div>
    <span
      className="sc-dVhcbM brDywy"
    >
      ON
    </span>
  </div>
</div>
`;

exports[`Storyshots Components|Text Standard 1`] = `
<p
  className="sc-eqIVtm kqsMOR"
>
  Hello
</p>
`;

exports[`Storyshots Components|Textarea all 1`] = `
<textarea
  className="sc-fAjcbJ hcbcFf"
  errored={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="文字を入力してください。"
  style={
    Object {
      "height": 0,
    }
  }
  value=""
/>
`;

exports[`Storyshots Components|Toast all 1`] = `
<div
  className="m-10"
>
  <div
    className="sc-caSCKo kKXPsh"
    data-test="info-toast"
  >
    <div
      className="sc-kjoXOD iGtuYP sc-bxivhb dUTGrc"
      color="white"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      size="24px"
    />
    <div>
      <div
        className="sc-cHGsZl dUKxpn"
      >
        ラベル
      </div>
      <div
        className="sc-TOsTZ kvlFel"
      >
        ここにテキスト。
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|ToolTip all 1`] = `
<div
  className="sc-kgAjT exdHDE"
  data-test="tool-tip"
  direction="top"
>
  <span
    className="sc-cJSrbW dhgyjM"
  >
    テキスト要素
  </span>
</div>
`;

exports[`Storyshots basics|Icons index 1`] = `
<div
  className="flex flex-wrap w-64"
>
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
  <div
    className="sc-bdVaJa cCvjGY"
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
    fill="#888"
  />
</div>
`;

exports[`Storyshots components|FileUploader all 1`] = `
<div
  className="m-16"
>
  <div>
    <div
      className="sc-kkGfuU iXgUWi"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
      width="400px"
    >
      <div
        className="sc-iAyFgw kXKIiG"
      >
        <input
          autoComplete="off"
          className="sc-jWBwVP iKHGiI"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-hSdWYo jbDmaG"
        >
          <div
            className="sc-eHgmQL isVdEg sc-bxivhb hBuNrQ"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
          <span
            className="sc-cvbbAY efFO"
          >
            ファイルを選択またはドラッグ&ドロップ
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mt-8"
  >
    <div
      className="sc-kkGfuU jFtbdp"
      onBlur={[Function]}
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="sc-iAyFgw kXKIiG"
      >
        <input
          autoComplete="off"
          className="sc-jWBwVP iKHGiI"
          multiple={true}
          onChange={[Function]}
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          tabIndex={-1}
          type="file"
        />
        <div
          className="sc-hSdWYo jbDmaG"
        >
          <div
            className="sc-eHgmQL isVdEg sc-bxivhb hBuNrQ"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            size="24px"
          />
          <span
            className="sc-cvbbAY efFO"
          >
            hoge.png
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots components|Icon Standard 1`] = `
<div
  className="sc-bxivhb edXnbt"
  color="#333"
  dangerouslySetInnerHTML={
    Object {
      "__html": undefined,
    }
  }
  size="24px"
/>
`;
